<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaste">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/taste_edit_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taste_page_title"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/taste_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/taste_edit_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/ratingBarStyleIndicator"
            android:rating="0"
            android:max="5"
            android:isIndicator="false"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/taste_edit_title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/taste_page_desc"/>

        <ProgressBar
            android:id="@+id/taste_edit_progressbar"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </LinearLayout>

    <Button
        android:id="@+id/taste_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/taste_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
